@@ -23,4 +23,7 @@ Helo pls log all changes here tyyyyyyyy or your gae
     - Stylised the footer
     - Changed background colour
 
+18/6/24 3:31 - Zen
+    - Overhauled homepage.html style
+
 
